--- a/frontend/src/styles/components/_filter-menu.scss
+++ b/frontend/src/styles/components/_filter-menu.scss
@@ -16,9 +16,14 @@
             height: 100%;
             padding: .5vw 0;
     
+            color: $dark-color;
             background-color: transparent;
             border-bottom: 1px solid $dark-color;
             caret-color: $dark-color;
+
+            &::placeholder {
+                color: $placeholder-color;
+            }
         }
     }
 }
