--- a/frontend/src/styles/components/_multiple-select.scss
+++ b/frontend/src/styles/components/_multiple-select.scss
@@ -94,6 +94,7 @@
                 transition: .15s ease;
 
                 &:hover {
+                    color: #F1F1F1;
                     background-color: #2c6cac;
 
                     transition: .15s ease;
