--- a/frontend/src/styles/components/_student-card.scss
+++ b/frontend/src/styles/components/_student-card.scss
@@ -31,7 +31,7 @@
             width: 90%;
             height: .01vw;
 
-            background-color: rgba(0, 0, 0, .2);
+            background-color: $mid-gray-color;
             
             transform: translateX(-50%);
         }
